fix alignment

--- a/appcompose/home/home.css
+++ b/appcompose/home/home.css
@@ -79,8 +79,8 @@
 }
 
 #main {
-    margin-right: 0px;
-    max-width: 290px;
+    margin-left: 0px;
+    max-width: 277px;
     overflow: hidden;
     padding: 3px;
 }
